# brownfield-cartographer

./: ..gitignore.swp  .env.example  .gitignore  README.md  RECONNAISSANCE.md  app.py  main.py  pyproject.toml  test_llm.py
cartography-artifacts/data-engineering-zoomcamp/: lineage_graph.json  module_graph.json
cartography-artifacts/jaffle-shop/.cartography/: CODEBASE.md  analysis_summary.md  cartography_trace.jsonl  last_run_sha.txt  lineage_graph.json  module_graph.json  module_graph_networkx.html  onboarding_brief.md  semanticist_trace.json
cartography-artifacts/jaffle_shop/: CODEBASE.md  analysis_summary.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  module_graph_networkx.html  onboarding_brief.md  semanticist_trace.json
cartography-artifacts/ol-data-platform/: CODEBASE.md  analysis_summary.md  cartography_trace.jsonl  last_run_sha.txt  lineage_graph.json  module_graph.json  module_graph_networkx.html  onboarding_brief.md  semanticist_trace.json
cartography-artifacts/ol-data-platform/.cartography/: CODEBASE.md  analysis_summary.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  module_graph_networkx.html  onboarding_brief.md  semanticist_trace.json
cartography-artifacts/ol-data-platform/semantic_index/: bin__dbt-local-dev.py.json  (+1106 more)
src/: __init__.py  cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: __init__.py
web/: index.html
